0024862: CLang warnings -Wint-to-pointer-cast

Warning is fixed.